# geba_acs

./: .env.dist  .gitignore  README.md  anses_cuil.py  docker-compose.yml  manage.py  requirements.txt  sql_test.py
access_control/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  urls_api.py  views.py
access_control/migrations/: 0001_initial.py  0002_biostar2config_biostardevice.py  0003_biostaruser.py  0004_biostardevicegroup_biostardevice_device_group.py  0005_biostaruser_activity_fields.py  0006_whitelistentry_days_of_week_whitelistentry_end_time_and_more.py  0006_whitelistentry_schedule_fields.py  0007_accessevent.py  0008_parkingmovement.py  0009_parkingmovement_exit_at_and_more.py  0010_ansesverificationrecord.py  0011_rename_access_contr_request_491766_idx_access_cont_request_e6b7fe_idx_and_more.py  (+1 more)
access_control/models/: __init__.py  biostar_config.py  (+4 more)
access_control/services/intelectron/api3000_wrapper/: README.md  libitkcom.so.0.0.0  pyproject.toml
access_control/services/intelectron/api3000_wrapper/api3000/: __init__.py  client.py  constants.py  errors.py  native.py  structs.py
access_control/services/intelectron/api3000_wrapper/examples/: basic_usage.py
acs/: asgi.py  settings.py  urls.py  wsgi.py
common/: __init__.py  apps.py  urls.py  views.py
docs/: plan_funcional_accesos.md
institutions/: admin.py  apps.py  models.py  serializers.py  urls.py  urls_console.py  views.py
people/: admin.py  apps.py  clientes_creation_script.sql  models.py  serializers.py  urls.py  urls_console.py  views.py
scripts/: setup.ps1  setup.sh
(+45 files in other folders)
