[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api3000-wrapper"
version = "0.1.0"
description = "Wrapper inicial en Python para Intelektron API-3000 usando libitkcom"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "OpenAI - generado para Hernan"}
]
dependencies = []

[tool.setuptools]
packages = ["api3000"]
